--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Mohtasham Murshid</h1>
-        <p class="section__text__p2">Computer Science Student</p>
+        <p class="section__text__p2">Computer Scientist</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -105,12 +105,7 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              As a passionate computer scientist, I thrive on solving complex problems through programming. With a deep interest in cutting-edge technologies and a commitment to continuous learning, I specialize in crafting efficient and innovative solutions across various domains, from web development to machine learning and blockchain. My hands-on experience with multiple programming languages and frameworks enables me to turn ideas into functional, well-architected projects. I’m driven by a love for coding and a curiosity for how technology can transform industries and improve lives.
             </p>
           </div>
         </div>
@@ -264,7 +259,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/istockphoto-1073505842-612x612.jpg"
                 alt="Project 1"
                 class="project-img"
               />
@@ -288,7 +283,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/1992036.jpg"
                 alt="Project 2"
                 class="project-img"
               />
@@ -312,22 +307,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/06fBcC3YpdFj7i0VvkWspTj-1..v1569469985.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Prediction of Song Popularity</h2>
+            <h2 class="experience-sub-title project-title">FlappyBird in Java</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/MohtashamMurshid/Prediction-of-song-s-popularity/'"
+                onclick="location.href='https://github.com/MohtashamMurshid/FlappyBird'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/MohtashamMurshid/Prediction-of-song-s-popularity'"
+                onclick="location.href='https://github.com/MohtashamMurshid/FlappyBird'"
               >
                 Live Demo
               </button>
@@ -360,7 +355,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/mohtashammurshid/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/mohtashammurshid/">mohtashammurshid</a></p>
         </div>
       </div>
     </section>
